# axumlings

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  info.toml
.solutions/01_routing/: routing1.rs  routing2.rs  routing3.rs  routing4.rs
.solutions/02_extractors/: custom_extractor1.rs  header1.rs  json1.rs  path1.rs  path2.rs  query1.rs
.solutions/03_responses/: headers1.rs  into_response_enum1.rs  json_response1.rs  status1.rs
.solutions/04_state/: arc_state1.rs  atomic1.rs  from_ref1.rs  rwlock1.rs
.solutions/05_tokio_async/: broadcast1.rs  interval1.rs  mpsc1.rs  select1.rs  shutdown1.rs  sleep1.rs  spawn1.rs
.solutions/06_serde/: alias1.rs  enum1.rs  flatten1.rs  nested1.rs  option1.rs  rename1.rs  skip1.rs  untagged1.rs  value1.rs
.solutions/07_errors/: anyhow1.rs  from1.rs  into_response1.rs  question1.rs  thiserror1.rs
.solutions/08_middleware/: auth1.rs  cors1.rs  middleware_state1.rs  route_layer1.rs  timeout1.rs  trace1.rs
.solutions/09_db/: migrations1.rs  pool1.rs  query_as1.rs  transaction1.rs
.solutions/10_config/: clap1.rs  config1.rs  env1.rs  secrecy1.rs
.solutions/11_websockets/: sse1.rs  ws1.rs
.solutions/12_production/: body_limit1.rs  concurrency1.rs  health1.rs  logging1.rs  request_id1.rs  shutdown_full1.rs
.solutions/13_ownership/: arc1.rs  clone1.rs  interior1.rs  lifetime1.rs  move1.rs
.solutions/14_type_system/: from_into1.rs  impl_trait1.rs  result1.rs  type_enum1.rs  type_option1.rs
.solutions/15_traits/: default1.rs  display1.rs  iterator1.rs  send_sync1.rs
.solutions/16_redis/: redis1.rs  redis2.rs  redis3.rs
.solutions/17_testing/: testing1.rs  testing2.rs  testing3.rs  testing4.rs
.solutions/18_jwt_auth/: jwt1.rs  jwt2.rs  jwt3.rs
.solutions/19_observability/: obs1.rs  obs2.rs  obs3.rs
exercises/: Cargo.toml  test_miniredis.rs
exercises/01_routing/: routing1.rs  routing2.rs  routing3.rs  routing4.rs
exercises/02_extractors/: custom_extractor1.rs  header1.rs  json1.rs  path1.rs  path2.rs  query1.rs
exercises/03_responses/: headers1.rs  json_response1.rs  status1.rs
exercises/04_state/: arc_state1.rs  atomic1.rs  from_ref1.rs  rwlock1.rs
exercises/05_tokio_async/: broadcast1.rs  interval1.rs  mpsc1.rs  select1.rs  shutdown1.rs  sleep1.rs  spawn1.rs
exercises/06_serde/: alias1.rs  custom_deserialize1.rs  enum1.rs  flatten1.rs  nested1.rs  option1.rs  rename1.rs  skip1.rs  untagged1.rs  value1.rs
exercises/07_errors/: anyhow1.rs  into_response1.rs  question1.rs  thiserror1.rs
exercises/08_middleware/: auth1.rs  cors1.rs  middleware_state1.rs  route_layer1.rs  timeout1.rs  trace1.rs
exercises/09_db/: migrations1.rs  pool1.rs  query_as1.rs  transaction1.rs
exercises/10_config/: clap1.rs  config1.rs  env1.rs  secrecy1.rs
exercises/11_websockets/: sse1.rs  ws1.rs
exercises/12_production/: body_limit1.rs  concurrency1.rs  health1.rs  logging1.rs  request_id1.rs  shutdown_full1.rs
exercises/13_ownership/: arc1.rs  clone1.rs  interior1.rs  lifetime1.rs  move1.rs
exercises/14_type_system/: from_into1.rs  impl_trait1.rs  result1.rs  type_enum1.rs  type_option1.rs
exercises/15_traits/: default1.rs  display1.rs  iterator1.rs  send_sync1.rs
exercises/16_redis/: redis1.rs  redis2.rs  redis3.rs
exercises/17_testing/: testing1.rs  testing2.rs  testing3.rs  testing4.rs
exercises/18_jwt_auth/: jwt1.rs  jwt2.rs  jwt3.rs
exercises/19_observability/: obs1.rs  obs2.rs  obs3.rs
exercises/migrations/: 0001_create_items.sql
src/: app_state.rs  cmd.rs  embedded.rs  exercise.rs  info_file.rs  init.rs  main.rs  run.rs  term.rs  watch.rs
src/watch/: state.rs  terminal_event.rs
