[workspace]
members = [".", "exercises"]

[package]
name = "axumlings"
version = "0.1.0"
edition = "2021"
description = "Small exercises to get you used to Axum, Tokio, and Rust web development!"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", default-features = false, features = ["windows", "events"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[build-dependencies]
toml = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38", default-features = false, features = ["std", "stdio", "termios"] }
